// Currently, the appengine gradle plugin's appengine devappserver launch doesn't interact well with Intellij/AndroidStudio's
// Gradle integration.  As a temporary solution, please launch from the command line.
// ./gradlew modulename:appengineRun
// If you would like more information on the gradle-appengine-plugin please refer to the github page
// https://github.com/GoogleCloudPlatform/gradle-appengine-plugin

apply plugin: 'java'
apply plugin: 'war'
apply plugin: 'appengine'

def appId = "socialfridge"
def appVersion = "0.1"

def appengineVersion = "1.9.1"

buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "com.google.appengine:gradle-appengine-plugin:1.8.9"
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

sourceCompatibility = 1.7
targetCompatibility = 1.7

dependencies {
    appengineSdk "com.google.appengine:appengine-java-sdk:${appengineVersion}"

    compile "com.google.guava:guava:16.+"

    // App Engine
    compile "javax.servlet:servlet-api:2.5"
    compile "org.apache.geronimo.specs:geronimo-jpa_2.0_spec:1.1"
    compile "com.ganyo:gcm-server:1.0.2"

    compile "com.google.appengine:appengine-endpoints:${appengineVersion}"
    compile "com.google.appengine:appengine-endpoints-deps:${appengineVersion}"

    testCompile "com.google.appengine:appengine-testing:${appengineVersion}"
    testCompile "com.google.appengine:appengine-api-stubs:${appengineVersion}"

    // ORM
    //compile "org.datanucleus:datanucleus-api-jpa:3.1.3"
    compile "com.googlecode.objectify:objectify:4.+"

    // Facebook
    compile "com.restfb:restfb:1.6.+"
}

sourceSets {
    main {
        java {
            srcDir "src/main/java"
        }
        output.classesDir = "src/main/webapp/WEB-INF/classes"
    }
}

compileJava {
    sourceCompatibility = JavaVersion.VERSION_1_7
    targetCompatibility = JavaVersion.VERSION_1_7
}

appengine {
    httpAddress = "0.0.0.0"
    jvmFlags = ['-d64', '-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8889', '-Xmx1024m', '-XX:MaxPermSize=512m']
    downloadSdk = true

    appcfg {
        update {
            useJava7 = true
        }

        enhancerApi = "jpa"
        enhancerVersion = "v2"

        logs {
            severity = 1
            numDays = 1
            outputFile = file("${appId}.log")
        }

        app {
            id = "${appId}"
            version = "${appVersion}"
        }

        endpoints {
            getDiscoveryDocsOnBuild = true
            getClientLibsOnBuild = true
        }
    }
}
